# TrayIcon

./: CMakeLists.txt  conanfile.txt  main.cpp
